Supprime README.md initial

--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "eslint-plugin-react-hooks": "^5.2.0-canary-e1e74071-20250321",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.483.0",
     "morgan": "^1.10.0",
     "pg": "^8.14.0",
     "react-hot-toast": "^2.5.2",
